--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -1617,3 +1617,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        "500":
+          description: |-
+            Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
