--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -473,6 +473,50 @@ tags:
     description: Operations about bans, for user privacy.
 
 paths:
+  /users:
+    parameters:
+      - name: searcher_id
+        in: query
+        description: The user's id.
+        required: true
+        schema:
+          $ref: "#/components/schemas/UserID"
+      - name: search_term
+        in: query
+        description: The search term.
+        required: true
+        schema:
+          $ref: "#/components/schemas/Username"
+    get:
+      operationId: searchUsers
+      tags:
+        - "users"
+      summary: Search for users
+      description: |-
+        Search for users by their name.
+      responses:
+        "200":
+          description: |-
+            The list of users that match the search term.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserList"
+        "401":
+          description: |-
+            The searcher_id is invalid.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        "500":
+          description: |-
+            Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
   /users/{user_name}/profile:
     parameters:
       - name: user_name
@@ -643,8 +687,8 @@ paths:
         schema:
           $ref: "#/components/schemas/SHA256hash"
     get:
-      operationId: getPhoto
-      summary: Get a photo
+      operationId: getPhotoMetadata
+      summary: Get a photo's metadata
       description: |-
         Get an individual photo from the user's profile, useful to populate the feed of other 
         users by picking photos recently posted by other users, also useful to manage 
